--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.11",
     "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
+    "ngx-loading": "^8.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.0.0-rc.1",
     "rxjs": "~6.5.5",
